--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,27 @@
 <body>
 <h1>Minecraft:</h1>
 <h2>The ultimate "sandbox" game</h2>
-<div id="boxed">This is a div test </div>
+<div id="boxed">
+What is MineCraft? - Minecraft is a sandbox game. A sandbox game is a videogame in which the player is given a great deal of creative ability to work towards certain goals within the game, if there are any. Minecraft is great because it takes that concept to another level, in Minecraft you really can do anything. Wether you're a competative gamer, a casual survival player, or someone looking to express their creativity through this block-based building game, minecraft has a place for you.  
+</div> 
 
-
+<p>
+	<style> 
+img {
+		float: left;
+	}
+	p {
+		border-color: lightblue;
+		borderstyle: solid;
+	}
+button {
+	float: right;
+}
+</style>
+	<img src="https://i.pinimg.com/736x/1a/05/2a/1a052a44ba2b5041525d194c2cd4a602.jpg" width="736" height="414">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum arcu enim, malesuada a tincidunt a, maximus ac sapien. Donec id massa urna. Proin consectetur pharetra elit, ut accumsan nisl condimentum id. Donec accumsan mollis orci, quis maximus leo porta eu. Duis non varius eros. Quisque mollis pellentesque leo, nec volutpat libero pretium vel. Nulla finibus congue orci, sed sollicitudin urna ullamcorper a.
+</p>
+<button type="button" onclick="file:///Users/student/Desktop/FinalWebsite/pvp.html">Click Me!</button>
 </body>
 </html>
 
